[tool.poetry]
name = "appdaemon-telegrambot"
version = "1.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdaemon = "^4.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
appdaemontestframework = { file = "/mnt/d/github/Appdaemon-Test-Framework/dist/appdaemontestframework-4.0.0b4-py3-none-any.whl" }
mock = "^4.0.3"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
